--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,24 @@
 .gradle
 /local.properties
-/.idea/workspace.xml
 .DS_Store
 /build
 *.apk
+*.ap_
+*.dex
+*.class
+bin/
+gen/
+build/
+local.properties
+.classpath
+.project
+.idea
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
+*.iml
+*.iws
+*.ipr
 *~
+*.swp
