--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@drawable/invisible"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light" >
+        android:theme="@style/Theme.Material.Blue" >
 
         <activity android:name=".InvisibleWidgetConfigureActivity" android:label="@string/configure_label">
             <intent-filter>
