--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
 
     defaultConfig {
         applicationId "tk.mygod.invisibleWidgetPlus"
-        minSdkVersion 7
+        minSdkVersion 15
         targetSdkVersion 21
         versionCode 302
         versionName "2.0.1.302"
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.melnykov:floatingactionbutton:+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
