--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,19 +9,19 @@ buildscript {
 apply plugin: 'com.android.application'
 
 repositories {
-        mavenCentral()
+    mavenCentral()
 }
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.1.0'
+    buildToolsVersion '21.1.1'
 
     defaultConfig {
         applicationId "tk.mygod.invisibleWidgetPlus"
         minSdkVersion 15
         targetSdkVersion 21
-        versionCode 307
-        versionName "2.0.2.307"
+        versionCode 308
+        versionName "2.1.3.308"
     }
     buildTypes {
         release {
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.melnykov:floatingactionbutton:+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:support-v13:+'
 }
