--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Material.Blue" >
 
-        <activity android:name=".InvisibleWidgetConfigureActivity" android:label="@string/configure_label">
+        <activity android:name=".InvisibleWidgetActionsChooser" android:label="@string/configure_label">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".InvisibleWidgetActivitiesChooser" android:label="@string/pick_activity" />
 
         <receiver android:name=".InvisibleWidget" >
             <intent-filter>
