--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".InvisibleWidgetActivitiesChooser" android:label="@string/pick_activity" />
+        <activity android:name=".InvisibleWidgetActivitiesChooser" android:label="@string/action_activities">
+            <intent-filter>
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+            </intent-filter>
+        </activity>
 
         <receiver android:name=".InvisibleWidget" >
             <intent-filter>
