--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.0.1'
+        classpath "jp.leafytree.gradle:gradle-android-scala-plugin:1.3.2"
     }
 }
 apply plugin: 'com.android.application'
+apply plugin: "jp.leafytree.android-scala"
 
 repositories {
         mavenCentral()
@@ -20,8 +22,8 @@ android {
         applicationId "tk.mygod.invisibleWidgetPlus"
         minSdkVersion 15
         targetSdkVersion 21
-        versionCode 317
-        versionName "2.1.5.317"
+        versionCode 321
+        versionName "2.1.6.321"
     }
     buildTypes {
         release {
@@ -33,5 +35,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile "org.scala-lang:scala-library:2.11.5"
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
