--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Material.Blue" >
 
-        <activity android:name=".InvisibleWidgetActionsChooser" android:label="@string/configure_label">
+        <activity android:name=".ShortcutsChooser" android:label="@string/configure_label">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
