--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
           package="tk.mygod.invisibleWidgetPlus">
 
     <application tools:replace="android:theme" android:allowBackup="true" android:icon="@drawable/invisible"
-                 android:label="@string/app_name" android:theme="@style/Theme.Material.Blue">
+                 android:label="@string/app_name" android:theme="@style/Theme.Material.Blue"
+                 android:supportsRtl="true">
 
         <activity android:name=".ShortcutsChooser" android:label="@string/configure_label">
             <intent-filter>
