--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,4 @@
-.gradle
-/local.properties
-.DS_Store
-/build
-*.apk
-*.ap_
-*.dex
-*.class
-bin/
-gen/
-build/
-local.properties
-.classpath
-.project
 .idea
-.directory
-/*/local.properties
-/*/out
-/*/*/build
-/*/*/production
-*.iml
-*.iws
-*.ipr
-*~
-*.swp
-manifest-merger-release-report.txt
+target
+proguard-sbt.txt
+local.properties
