--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-          package="tk.mygod.invisibleWidgetPlus">
+          package="tk.mygod.invisibleWidgetPlus" versionCode="358" versionName="2.1.8.358">
+
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="23" />
 
     <application tools:replace="android:theme" android:allowBackup="true" android:icon="@drawable/invisible"
                  android:label="@string/app_name" android:theme="@style/Theme.Material.Blue"
-                 android:supportsRtl="true">
+                 android:fullBackupContent="true" android:supportsRtl="true">
 
         <activity android:name=".ShortcutsChooser" android:label="@string/configure_label">
             <intent-filter>
