--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="23" />
 
-    <application tools:replace="android:theme" android:allowBackup="true" android:icon="@drawable/invisible"
+    <application android:allowBackup="true" android:icon="@drawable/invisible"
                  android:label="@string/app_name" android:theme="@style/Theme.Material"
                  android:fullBackupContent="true" android:supportsRtl="true">
 
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".InvisibleWidget" >
+        <receiver android:name=".InvisibleWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.appwidget.action.APPWIDGET_DELETED" />
@@ -36,6 +36,13 @@
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/invisible_widget_info" />
+        </receiver>
+        <receiver android:name=".PackageListener">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <data android:scheme="package"/>
+            </intent-filter>
         </receiver>
     </application>
 
