--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="tk.mygod.invisibleWidgetPlus" android:versionCode="371" android:versionName="2.1.9.371">
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="23" />
