--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="tk.mygod.invisibleWidgetPlus" android:versionCode="371" android:versionName="2.1.9.371">
 
-    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="23" />
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="24" />
 
     <application android:allowBackup="true" android:icon="@drawable/invisible"
                  android:label="@string/app_name" android:theme="@style/Theme.Material"
@@ -31,6 +31,7 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.appwidget.action.APPWIDGET_DELETED" />
+                <action android:name="tk.mygod.invisibleWidgetPlus.InvisibleWidgetManager.ACTION_TAP" />
             </intent-filter>
 
             <meta-data
