--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="tk.mygod.invisibleWidgetPlus" android:versionCode="397" android:versionName="2.2.0">
+          package="tk.mygod.invisibleWidgetPlus"
+          android:versionCode="403" android:versionName="2.2.1">
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="24" />
 
