--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
 
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="24" />
 
-    <application android:allowBackup="false" android:icon="@drawable/invisible"
+    <application android:allowBackup="true" android:icon="@drawable/invisible"
                  android:label="@string/app_name" android:theme="@style/Theme.Material"
-                 android:supportsRtl="true">
+                 android:fullBackupContent="@xml/backup_scheme" android:supportsRtl="true">
 
         <activity android:name=".ShortcutsChooser" android:label="@string/configure_label">
             <intent-filter>
@@ -31,6 +31,7 @@
         <receiver android:name=".InvisibleWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.APPWIDGET_DELETED" />
                 <action android:name="tk.mygod.invisibleWidgetPlus.InvisibleWidgetManager.ACTION_TAP" />
             </intent-filter>
 
